--- a/WebDtask1.html
+++ b/WebDtask1.html
@@ -16,7 +16,7 @@
     <hr>
     <h2>Education</h2>
     <ul>
-        <li>Pursuing B-tech first year in Electronics and Communication Engineering at Indian Institute of Information Technology. </li>
+        <li>Pursuing B-tech first year in Electronics and Communication Engineering at Indian Institute of Information Technology Allahabad. </li>
         <li>Completed 11th and 12th standard in VijayaRatna Junior College, Hyderabad, Telangana.</li>
         <li>Did Schooling in St.Martins High School, Malkajgiri, Telangana.</li>
     </ul>
